# behave-training

./: README.md  pyproject.toml
behave/: README.md
behave/feature/steps/: loginsteps.py  scenariobdsteps.py
behave/features/: amazontask.feature  environment.py  orangehrm.feature  orangehrmlogin.feature  scenariobg.feature
behave/features/pageobject/: basepage.py  createaccountpage.py  homepage.py  resultpage.py  signinpage.py
behave/features/scr/: all_objects.py  all_opject.py  helper_function.py  helper_functions.py
behave/features/steps/: amazon_create_Account_steps.py  amazonsearch.py  amazontasksteps.py  orangehrmsteps.py
reports/: 034880a8-3ef5-414f-ab10-51cc26f25451-result.json  0431f6db-324e-4bdd-8163-0c7f264b624f-result.json  0de520bc-ee89-42ed-ab74-b50bf984ebe8-result.json  4ff90718-72a2-4737-a553-b6175936e75e-result.json  5ade534a-4a63-4590-868c-9803bbc98c0a-result.json  64310899-cbce-4333-a723-db0fb4b2ba36-result.json  f51d5210-287e-43ec-bc25-0034afd4dbcb-result.json
tests/: test_behave.py
